# utility_rates

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.databricks/: commit_outputs
.github/: CODEOWNERS
.github/workflows/: lint.yml  release.yml  run-tests.yml
notebooks/: benchmarking_test.py  black_hills_hourly_emissions.ipynb  time_test_large_example.py
notebooks/basic_demo/: basic_demo.ipynb  example_sched.json  resstock_electric_load_profile_baseline_sample.csv
notebooks/duke_capacity_payments/: duke_capacity_payment_structure.json  duke_capacity_payments.ipynb
notebooks/duquesne_heating_rate_hp/: duquesne_heating_rate_hp.ipynb  rate.json
notebooks/san_jose_hp_hpwh/: pge_e_elec.json  pge_e_tou_c.json  san_jose_hp_hpwh.ipynb
src/rates/: __init__.py  modeled_rate.py  rate_structure.py  rate_widgets.py  utility_selector_functions.py
tests/: benchmarking.ipynb  conftest.py  run_unit_tests.ipynb  test_modeled_rate.py  test_rate.py  test_rate_structure.py
